--- a/destiny4.0/Norte/ilimitada_avanzada_600/resources/templates/index.hbs
+++ b/destiny4.0/Norte/ilimitada_avanzada_600/resources/templates/index.hbs
@@ -70,98 +70,8 @@ utag_data.plans_add2cart = [
           {{> also-included }}
 
         <!-- SIN SORPRESAS -->
-        <section class="vf-mobile ws10-u--pt12x">
-          <p class="ws10-u-heading--4 ws10-u--mb2x ws10-flex ws10-flex__direction--column">
-            <span><strong>Sin sorpresas.</strong></span>
-            <span><strong>No escondemos nada</strong></span>
-          </p>
-          <p>Impuestos y cuota de línea incluidos.</p>
-          <p><strong>Permanencia 6 meses</strong></p>
-          <p>¿Cuánto voy a pagar?</p>
-          <p><strong>Paquete Fibra + Móvil: 30,49€/mes durante 6 meses, después
-              61,99€/mes</strong></p>
-          <p class="ws10-flex ws10-flex__direction--column">
-            <span>Otras promociones:</span>
-            <span>Llévate el paquete de Fibra + Móvil al 50% dto. 6 meses</span>
-            <span data-js-vf="_portability">Línea adicional: GRATIS durante 1
-              año, después con un 50% dto. por solo 17,50€/mes (dto. ya
-              aplicado).</span>
-            <span>Paquete de TV: GRATIS</span>
-            {{! <span>Paquete de TV: GRATIS durante 1 año, después 10€/mes.</span> }}
-          </p>
-
-          <!----PRICE-TAB-->
-
-          <div class="ws10-c-price-bar-group ws10-u--mt4x ws10-u--mb4x">
-            <div class="ws10-c-price-bar">
-              <span class="ws10-c-price-bar__text ws10-u--mb4x">
-                Los primeros 6 meses
-              </span>
-              <span
-                class="ws10-c-price-bar__hr ws10-c-price-bar__hr--start ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-aqua-blue"></span>
-              <div
-                class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop">
-                <span class="ws10-c-price__amount">30,49</span>
-                <span class="ws10-c-price__currency">€</span>
-                <sub class="ws10-c-price__recurrence">/mes</sub>
-              </div>
-            </div>
-            <div class="ws10-c-price-bar">
-              <span class="ws10-c-price-bar__text ws10-u--mb4x" data-js-vf="_portability">Del mes 7 al mes 12</span>
-              <span class="ws10-c-price-bar__text ws10-u--mb4x ws10-u--hidden" data-js-vf="_newNumber">A partir del mes
-                7</span>
-              <span
-                class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--bg-lemon-yellow"></span>
-              <div
-                class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop">
-                <span class="ws10-c-price__amount">61,99</span>
-                <span class="ws10-c-price__currency">€</span>
-                <sub class="ws10-c-price__recurrence">/mes</sub>
-              </div>
-            </div>
-            <div class="ws10-c-price-bar" data-js-vf="_portability">
-              <span class="ws10-c-price-bar__text ws10-u--mb4x">
-                A partir del año
-              </span>
-              <span
-                class="ws10-c-price-bar__hr ws10-c-price-bar__hr--end ws10-c-price-bar__hr--separator-start ws10-c-price-bar__hr--bg-dark-grey"></span>
-              <div
-                class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop">
-                <div data-js-vf="_portability">
-                  <span class="ws10-c-price__amount">79,49</span>
-                </div>
-                <div class="ws10-u--hidden" data-js-vf="_newNumber">
-                  <span class="ws10-c-price__amount">71,98</span>
-                </div>
-                <span class="ws10-c-price__currency">€</span>
-                <sub class="ws10-c-price__recurrence">/mes</sub>
-              </div>
-            </div>
-          </div>
-
-          <!------------->
-          <p class="ws10-u--mb1x">La instalación del servicio de fibra, salvo
-            que sea autoinstalable, tiene un coste para el cliente de 150€.</p>
-          <p>Vodafone renuncia al cobro de este coste si el cliente se mantiene
-            activo en el servicio durante, al menos, 1 año desde la fecha de
-            instalación.</p>
-          {{! <p>⚠️ El precio indicado en esta oferta incrementará +3€/mes en la línea móvil principal y +1,5€/mes en
-            las líneas adicionales a partir del próximo 15/7</p> }}
-
-          <a class="ws10-c-link-chevron ws10-c-link-chevron--primary" target="_blank"
-            href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/legales/alt/n/"
-            data-analytics-element="card addons" data-analytics-context="condiciones legales"
-            data-analytics-category="cta" data-analytics-id="-5460257368589">
-            Ver condiciones legales
-            <span class="ws10-u--hidden-visually"> color #E60000</span>
-            <svg class="ws10-c-link-chevron__icon" xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
-              <title>Flecha derecha</title>
-              <use class="icon-v3" xlink:href="#icon-chevron-right"></use>
-            </svg>
-          </a>
-
-        </section>
+          {{> sinsorpresas }}
+          
         <!-- TIMELINE  -->
         {{> timeLine }}
 
