--- a/destiny4.0/Norte/ilimitada_avanzada_600/resources/templates/partials/sinsorpresas.hbs
+++ b/destiny4.0/Norte/ilimitada_avanzada_600/resources/templates/partials/sinsorpresas.hbs
@@ -6,7 +6,8 @@
     <span>{{{sinSorpresas.title}}}</span>
   </p>
   <p>{{{sinSorpresas.conditions}}}</p>
-  <p>{{{sinSorpresas.permanency}}}</p>
+  <p data-js-vf="_portability">{{{sinSorpresas.permanency}}}</p>
+  <p class="ws10-u--hidden" data-js-vf="_newNumber">{{{sinSorpresas.permanency2}}}</p>
     <p>{{{sinSorpresas.question}}}</p>
   <p>{{{sinSorpresas.paquete}}}</p>
   <p class="ws10-flex ws10-flex__direction--column">
@@ -26,7 +27,7 @@
       >
           {{ sinSorpresas.bar.[1].bar1 }}</span>
       <span
-        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--start ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-lemon-yellow"
+        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--start ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-turquoise"
       ></span>
       <div
         class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
@@ -50,7 +51,7 @@
         {{ sinSorpresas.bar.[0].bar2}}
       </span>
       <span
-        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-turquoise"
+        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-lemon-yellow"
       ></span>
       <div
         class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
@@ -65,7 +66,7 @@
         {{ sinSorpresas.bar.[1].bar2}}
       </span>
       <span
-        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-turquoise"
+        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-lemon-yellow"
       ></span>
       <div
         class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
@@ -85,7 +86,7 @@
         data-js-vf="_newNumber"
         >  {{ sinSorpresas.bar.[1].bar3}}</span>
       <span
-        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--bg-fresh-orange"
+        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--bg-black"
       ></span>
       <div
         data-js-vf="_portability"
