--- a/destiny4.0/Norte/ilimitada_plus_600/resources/templates/partials/sinsorpresas.hbs
+++ b/destiny4.0/Norte/ilimitada_plus_600/resources/templates/partials/sinsorpresas.hbs
@@ -10,8 +10,11 @@
   <p class="ws10-u--hidden" data-js-vf="_newNumber">{{{sinSorpresas.permanency2}}}</p>
     <p>{{{sinSorpresas.question}}}</p>
   <p>{{{sinSorpresas.paquete}}}</p>
-  <p class="ws10-flex ws10-flex__direction--column">
+  <p class="ws10-flex ws10-flex__direction--column" data-js-vf="_portability">
      {{{sinSorpresas.promociones}}}
+  </p>
+   <p class="ws10-flex ws10-flex__direction--column ws10-u--hidden" data-js-vf="_newNumber">
+     {{{sinSorpresas.promociones2}}}
   </p>
   <!----PRICE-TAB-->
 <div class="ws10-c-price-bar-group ws10-u--mt4x ws10-u--mb4x">
@@ -66,7 +69,7 @@
         {{ sinSorpresas.bar.[1].bar2}}
       </span>
       <span
-        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-lemon-yellow"
+        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-turquoise"
       ></span>
       <div
         class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
@@ -76,19 +79,15 @@
         <sub class="ws10-c-price__recurrence">/mes</sub>
       </div>
     </div>
-    <div class="ws10-c-price-bar" data-js-vf="_portability">
+    <div class="ws10-c-price-bar">
       <span
-        class="ws10-c-price-bar__text ws10-u--mb4x">  {{ sinSorpresas.bar.[0].bar3}}</span>
+        class="ws10-c-price-bar__text ws10-u--mb4x"
+        data-js-vf="_portability"
+        >  {{ sinSorpresas.bar.[0].bar3}}</span>
       <span
-        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--bg-black"
-      ></span>
-      <div
-        class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
-      >
-        <span class="ws10-c-price__amount">  {{ sinSorpresas.bar.[0].price3}}</span>
-        <span class="ws10-c-price__currency">€</span>
-        <sub class="ws10-c-price__recurrence">/mes</sub>
-      </div>
+        class="ws10-c-price-bar__text ws10-u--mb4x ws10-u--hidden"
+        data-js-vf="_newNumber"
+        >  {{ sinSorpresas.bar.[1].bar3}}</span>
     </div>
   </div>
 
