--- a/destiny4.0/colectivos/ilimitada_avanzada_600/resources/templates/partials/cardRate.hbs
+++ b/destiny4.0/colectivos/ilimitada_avanzada_600/resources/templates/partials/cardRate.hbs
@@ -63,27 +63,27 @@
                         </fieldset>
                         {{#each rates }}
                             <div class=" {{ hidden }}" data-js-vf="{{ js-vf }}">
-                                        <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--percent">
-                                            {{ offers.discount }}
-                                        </p>
-                            <div class="ws10-c-card-rate__w-cta">
-                                <div class="ws10-c-card-rate__w-offers">
-                                    <div class="ws10-c-card-rate__offer" id="rate-1-offer-1">
-                                        <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--label">
-                                            {{ offers.label }}
-                                        </p>
-                                        {{#if offers.finalPrice }}
-                                        <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price">
-                                            {{{ offers.finalPrice }}}
-                                        </p>
-                                        {{/if }}
-                                        <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                            {{{ offers.discountPrice }}}
-                                        </p>
+                                <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--percent">
+                                    {{ offers.discount }}
+                                </p>
+                                <div class="ws10-c-card-rate__w-cta ws10-u--mt2x">
+                                    <div class="ws10-c-card-rate__w-offers">
+                                        <div class="ws10-c-card-rate__offer" id="rate-1-offer-1">
+                                            <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--label">
+                                                {{ offers.label }}
+                                            </p>
+                                            {{#if offers.finalPrice }}
+                                            <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price">
+                                                {{{ offers.finalPrice }}}
+                                            </p>
+                                            {{/if }}
+                                            <p class="ws10-c-card-rate__price ws10-u-color--black">
+                                                {{{ offers.discountPrice }}}
+                                            </p>
+                                        </div>
                                     </div>
+                                    {{> cta cta }}
                                 </div>
-                                {{> cta cta }}
-                            </div>
                             </div>
                         {{/each }}
                     </form>
