--- a/destiny4.0/colectivos/ilimitada_avanzada_600/resources/templates/partials/popupTv.hbs
+++ b/destiny4.0/colectivos/ilimitada_avanzada_600/resources/templates/partials/popupTv.hbs
@@ -30,247 +30,39 @@
     <div
       class="ws10-c-backdrop__content js-backdrop-content ws10-u--pt0 ws10-u--mt0"
     >
-      <p
-        class="ws10-u-heading--4 ws10-u-heading--4-lt ws10-align--center ws10-u--pt0 ws10-u--mt0"
-      >Canales Pack Seriefans</p>
-      <ul class="ws10-flex ws10-flex__wrap ws10-u--m0">
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img src="img/section-tv/popup/seriefans/hbo.png" alt="logo HBO" />
-          <p class="ws10-c-paragraph ws10-u--mb0">HBO España</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/seriefans/foxnow.png"
-            alt="logo canal Foxnow"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">FOXNOW</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/seriefans/axnnow.png"
-            alt="logo canal Axn Now"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">AXN Now</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/seriefans/tnt.png"
-            alt="logo canal TNT"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">TNT</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/seriefans/fox.png"
-            alt="logo canal Fox"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">FOX</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/seriefans/amcseries-desktop.png"
-            alt="logo canal Syfy"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">AMC SELEKT Series</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/seriefans/syfy.png"
-            alt="logo canal Syfy"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">SYFY</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/seriefans/calle13.png"
-            alt="logo canal Calle 13"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">Calle 13</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/seriefans/axn.png"
-            alt="logo canal AXN"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">AXN</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/seriefans/axnwhite.png"
-            alt="logo canal AXN White"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">AXN White</p>
-        </li>
-      </ul>
-      <p class="ws10-u-heading--5 ws10-align--center">Y además todos los Packs
-        incluyen estos canales:</p>
-      <ul class="ws10-flex ws10-flex__wrap ws10-u--m0">
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/seriefans/amc_desktop.png"
-            alt="logo AMC"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">AMC</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/foxlife.png"
-            alt="logo FOX LIFE"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">FOX Life</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/cosmo.png"
-            alt="logo canal COSMO"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0 ws10-u-mb0">Cosmo</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/comedy.png"
-            alt="logo canal Comedy Central"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">Comedy Central</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/xtrm.png"
-            alt="logo canal XTRM"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">XTRM</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/tcm.png"
-            alt="logo canal TCM"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">TCM</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/sundance.png"
-            alt="logo canal Sundance TV"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">Sundance TV</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/natgeo.png"
-            alt="logo canal National Geographic"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">National Geographic</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/natgeonow.png"
-            alt="logo canal National Geographic Now"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">National Geographic Now</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/cocina.png"
-            alt="logo canal Cocina"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">Cocina</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/decasa.png"
-            alt="logo canal Decasa"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">Decasa</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/mtv.png"
-            alt="logo canal MTV"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">MTV</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/mymtv.png"
-            alt="logo canal MTV Music"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">MyMTV Music</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/solmusica.png"
-            alt="logo canal SOL Música"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">SOL Música</p>
-        </li>
+      <p class="ws10-u-heading--4 ws10-u-heading--4-lt ws10-align--center ws10-u--pt0 ws10-u--mt0">
+          {{ tv.popup.title }}
+      </p>
+      {{#if tv.popup.description }}
+      <p class="ws10-align--center">{{ tv.popup.description }}</p>
+      {{/if }}
+      {{#if tv.popup.included }}
+      <p class="ws10-align--center">{{ tv.popup.included }}</p>
+      {{/if }}
 
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/eurosport.png"
-            alt="logo Eurosport 1"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">Eurosport 1</p>
-        </li>
-        <li
-          class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center ws10-u--p0"
-        >
-          <img
-            src="img/section-tv/popup/comunes/selekt.png"
-            alt="logo selekt"
-          />
-          <p class="ws10-c-paragraph ws10-u--mb0">Selekt</p>
-        </li>
+      <ul class="ws10-flex ws10-flex__wrap ws10-u--ml0">
+        {{#each tv.popup.img}}
+          <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
+              {{> picture params=this}}
+              <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">{{alt}}</p>
+          </li>
+          {{/each}}
       </ul>
+
+      {{#if tv.popup.alsoIncluded }}
+        <p class="ws10-align--center">{{ tv.popup.alsoIncluded }}</p>
+      {{/if }}
+
+      {{#if tv.popup.img2 }}
+      <ul class="ws10-flex ws10-flex__wrap ws10-u--ml0">
+        {{#each tv.popup.img2 }}
+          <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
+              {{> picture params=this}}
+              <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">{{alt}}</p>
+          </li>
+          {{/each}}
+      </ul>
+      {{/if }}
 
     </div>
   </section>
