--- a/destiny4.0/one/ilimitada-plus-600/resources/templates/partials/cardRate.hbs
+++ b/destiny4.0/one/ilimitada-plus-600/resources/templates/partials/cardRate.hbs
@@ -33,6 +33,7 @@
                     </ul>
 
                     <form action="" method="get" class="vf-form ws10-c-card-rate__form ws10-c-form" data-js-vf="_showOrHideSticky">
+                        {{#if form}}
                         <fieldset>
                             <legend class="ws10-c-card-rate__form-title">
                                 {{ form.title }}
@@ -61,6 +62,7 @@
                                 </div>
                             </div>
                         </fieldset>
+                        {{/if }}
                         {{#each rates }}
                             <div class="ws10-c-card-rate__w-cta {{ hidden }}" data-js-vf="{{ js-vf }}">
                                 <div class="ws10-c-card-rate__w-offers">
